name:                 cloudyfs
version:              0.0.1
license:              AllRightsReserved
author:               Brendan Hickey <brendan@bhickey.net>, Nicholas Sinnott-Armstrong <>
maintainer:           Brendan Hickey <brendan@bhickey.net>, Nicholas Sinnott-Armstrong <>
synopsis:             A cloud in the file system.
description:          A cloud in the file system.
category:             System
stability:            Experimental
cabal-version:        >= 1.6
build-type:           Simple

Executable cloudyfs {
  main-is:            cloudyfs.hs
  build-depends:      base >= 4 && < 5, unix, bytestring, containers, HFuse,
                      datetime, filepath, regex-tdfa, regex-base
}
